ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  ingressClassName: nginx-example
  rules:
  - host: aditya.aruna.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-app-service
            port:
              number: 80

  - host: aruna.aditya.click
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: flask-app-service
              port:
                number: 80
